animation mobile version fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,6 +319,11 @@ footer div:last-of-type img {
     }
 
 
+    .designerFloat img {
+        width:100%;
+        left:0;
+    }
+
     h3 {
         font-size: 2rem;
 }
